turn on http basic auth

--- a/env.example
+++ b/env.example
@@ -4,3 +4,6 @@ AIRBRAKE_PROJECT_NAME='My Project'
 AIRBRAKE_PROJECT_ID=123
 AIRBRAKE_ACCOUNT=mycompany
 AIRBRAKE_AUTH_TOKEN=secret
+
+HTTP_AUTH_USERNAME=user
+HTTP_AUTH_PASSWORD=secret
