--- a/bower.json
+++ b/bower.json
@@ -3,6 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
-    "jquery-timeago": "~1.4.0"
+    "jquery-timeago": "~1.4.0",
+    "normalize-css": "~3.0.1"
   }
 }
